V5.6.2
* Fixed ticket 391 (https://github.com/Rocologo/MobHunting/issues/391)
V5.6.1
* Fixed BagOfGold duplication reported and tested by Instantout. Thanks! 
* Added new commands "/mh database reset-achievements" to delete all achievements data from database.
* Added new commands "/mh database reset-statistics" to delete all statistics data from database.
* Added new commands "/mh database reset-bounties" to delete all bounties from database.
* Fixed ticket 387 (https://github.com/Rocologo/MobHunting/issues/387)
* Fixed ticket 386 (https://github.com/Rocologo/MobHunting/issues/386)
* Reloading Minecraft Advancements after 15 seconds.
* Fixed Ticket 389 - ConcurrentModificationException (https://github.com/Rocologo/MobHunting/issues/389)
V5.6.0
* Fixed NPE error in MobHuntingManager.java:1810
V5.5.9
* Fixed NPE error in Messages.java:516
V5.5.8
* Added MessageQueue for ActionBar messages.
* Shutdown process optimized
* Fixed bug where commands was not run second time the mob was killed.
V5.5.7
* Fixed bug. Could not sell dropped heads. (https://github.com/Rocologo/MobHunting/issues/368)
* Fixed NPE bug (https://github.com/Rocologo/MobHunting/issues/373) 
* Fixed bug. mh_Bounties was not created.
* Fixed grinding detection.
* MobHunting Heads and BagOfGold can now be dropped using the mouse.
V5.5.6
* Fixed bug: Bounties was not enabled on server start
* Fixed bug: mob.*.message: '' is not deleted anymore
* CloseInventory for Bounties and Achievements is delayed 1 tick to let the event be cancelled. 
V5.5.5
* There is a chance that a fish head is dropped in the water, when a fish is caught
* Convert Messages is improved (only when you run V5.5.5 first time)  
V5.5.4
* Improved config.yml version detection. This should fix the reseting messages problem.
* Improved backup of config.yml (https://github.com/Rocologo/MobHunting/issues/365)
V5.5.3
* Added permission to run commands (https://www.spigotmc.org/threads/mobhunting.46937/page-160#post-2913762)